<resources>
    <!-- App details -->
    <string name="app_name" translatable="false">Doodle</string>
    <string name="app_name_v" translatable="false">Doodle  v</string>
    <string name="company_name_prefix">An</string>
    <string name="company_name" translatable="false">AspiraSoft</string>
    <string name="company_name_suffix">App</string>
    <string name="provider" translatable="false">.sfllhkhan95.doodle.utils.provider</string>
    <string name="package_whatsapp" translatable="false">com.whatsapp</string>
    <string name="package_messenger" translatable="false">com.facebook.orca</string>

    <!-- API strings -->
    <string name="admob_app_id" translatable="false">ca-app-pub-6293532072634065~6156179621</string>
    <string name="admob_ad_banner_confirmation" translatable="false">ca-app-pub-6293532072634065/1203928393</string>
    <string name="admob_ad_banner_options" translatable="false">ca-app-pub-6293532072634065/3015894701</string>
    <string name="admob_ad_rewarded" translatable="false">ca-app-pub-6293532072634065/2952381497</string>
    <string name="admob_ad_interstitial" translatable="false">ca-app-pub-6293532072634065/4818681834</string>

    <!-- URLs -->
    <string name="privacy_policy_url" translatable="false">https://www.iubenda.com/privacy-policy/35502767</string>
    <string name="url_doodle" translatable="false">https://play.google.com/store/apps/details?id=sfllhkhan95.doodle</string>
    <string name="url_doodle_source" translatable="false">https://github.com/sfllhkhan95/paint</string>

    <!-- Notification channels -->
    <string name="notifications_main_channel_name">Primary notification channel</string>
    <string name="notifications_main_channel_description">This is the main notifications channel.</string>

    <!-- Error messages -->
    <string name="error_unknown">Unknown error. Upgrade application to latest version or contact support if error persists.</string>
    <string name="error_no_gallery">No Gallery application found.</string>
    <string name="error_no_camera">No Camera application found.</string>

    <!-- Confirmation and Status messages -->
    <string name="confirm_delete_title">Are you sure?</string>
    <string name="confirm_delete_body">This action will permanently delete the project. Do you really wish to continue?</string>
    <string name="confirm_exit">Exit without saving?</string>
    <string name="confirm_revert">Reset to original?</string>
    <string name="confirm_save">Save the current Doodle?</string>
    <string name="confirm_quit">Do you really wish to quit?</string>
    <string name="prompt_permissions">Permission to perform storage operations required.</string>
    <string name="status_restricted">Grant all permissions before continuing.</string>

    <!-- Content descriptions (for Accessibility) -->
    <string name="desc_brush_size_icon">Select brush size</string>
    <string name="desc_donated">Thank you for supporting Doodle! Ads will be removed when you launch the app again.</string>
    <string name="desc_icon">Icon</string>
    <string name="desc_logo">Logo</string>
    <string name="desc_messenger_share_button">Share to Messenger</string>
    <string name="desc_thumbnail">Project icon</string>

    <!-- Prompt descriptions -->
    <string name="desc_prompt_save">Your project will be saved to Gallery, and you can continue editing it later.</string>
    <string name="desc_prompt_exit">All unsaved changes would be discarded. Do you really wish to proceed?</string>
    <string name="desc_prompt_revert">This action will erase all unsaved changes. It cannot be reversed. Do you really wish to proceed?</string>
    <string name="desc_prompt_share">Share on WhatsApp, send Doodle in a Messenger conversation, or share through other applications</string>
    <string name="desc_prompt_support">Doodle is a free-of-charge, open-source project. Our team is hard at work to bring you the best product. Minimal ads are the only income source from this app. You can support Doodle by reviewing it on Play Store, contributing to its source, or donating a one-time amount to remove all ads from the app.</string>
    <string name="desc_prompt_supported">Thank you for supporting Doodle!  Doodle is a free-of-charge, open-source project. Our team is hard at work to bring you the best product. You can support Doodle by reviewing it on Play Store or contributing to its source.</string>
    <string name="desc_prompt_watch_ad">Doodle is a free, open-source project. Consider clicking on \'Watch Ad\' below to see a video ad. This helps us generate revenue. Happy Doodling!</string>
    <string name="desc_prompt_quit">Come back soon.\nHappy Doodling!</string>

    <!-- Placeholders -->
    <string name="placeholder_default_theme">Default Theme</string>
    <string name="placeholder_dialog_body">Dialog description comes here</string>
    <string name="placeholder_hello_world">Hello, World!</string>
    <string name="placeholder_messenger_recipient">Messenger Conversation</string>
    <string name="placeholder_name">First M. Last</string>
    <string name="placeholder_title">Title</string>

    <!-- Labels -->
    <string name="label_blank">Blank Project</string>
    <string name="label_camera">Camera</string>
    <string name="label_compose">Compose</string>
    <string name="label_choose_theme">Choose Theme</string>
    <string name="label_delete">Delete</string>
    <string name="label_faqs">Doodle FAQs</string>
    <string name="label_gallery">Gallery</string>
    <string name="label_messenger_action">Replying to</string>
    <string name="label_new_message">New Message</string>
    <string name="label_op1">Option 1</string>
    <string name="label_op2">Option 2</string>
    <string name="label_op3">Option 3</string>
    <string name="label_privacy">Privacy Policy</string>
    <string name="label_set">Set</string>
    <string name="label_settings">Settings</string>

    <string name="label_share_whatsapp">WhatsApp</string>
    <string name="label_share_messenger">Messenger</string>
    <string name="label_share_default">Default</string>

    <string name="label_support_contribute">Contribute</string>
    <string name="label_support_donate">Donate</string>
    <string name="label_support_review">Review</string>

    <string name="label_exit">Close</string>
    <string name="label_watch_ad">Watch Ad</string>

    <!-- Settings screen options -->
    <string name="settings_item_help">Get Help</string>
    <string name="settings_item_privacy">See Privacy Policy</string>
    <string name="settings_icon_support">Support Us</string>
    <string name="settings_item_theme">Choose Theme</string>
    <string name="settings_item_intro">See Intro</string>
    <string name="settings_item_locale">Language</string>

    <!-- Menu items -->
    <string name="menu_action_layers">Layers</string>
    <string name="menu_action_redo">Redo</string>
    <string name="menu_action_revert">Revert</string>
    <string name="menu_action_save">Save</string>
    <string name="menu_action_share">Share</string>
    <string name="menu_action_undo">Undo</string>

    <string name="menu_tools_box">Box</string>
    <string name="menu_tools_canvas">Canvas Color</string>
    <string name="menu_tools_circle">Circle</string>
    <string name="menu_tools_color_fill">Fill Color</string>
    <string name="menu_tools_color_stroke">Pen Color</string>
    <string name="menu_tools_diamond">Diamond</string>
    <string name="menu_tools_eraser">Eraser</string>
    <string name="menu_tools_eyedrop">Color Picker</string>
    <string name="menu_tools_line">Line</string>
    <string name="menu_tools_pen">Pen</string>
    <string name="menu_tools_rect">Quad</string>
    <string name="menu_tools_shape">Shapes</string>
    <string name="menu_tools_star">Star</string>
    <string name="menu_tools_triangle">Triangle</string>

    <!-- Intro Slides -->
    <string name="label_intro_done_permission">Allow</string>
    <string name="label_intro_end_normal">Start</string>

    <string name="slide1_title">Welcome</string>
    <string name="slide1_description">Doodle is your art-companion which you can use for anything from casual doodling to more serious drawings.</string>

    <string name="slide2_title">Shapes &amp; Colours</string>
    <string name="slide2_description">In addition to free-form doodling, Doodle allows you to draw predefined geometric shapes in colours of your choice.</string>

    <string name="slide3_title">Doodle with Friends</string>
    <string name="slide3_description">Send your creations to your friends on Facebook Messenger, and reply to their Doodle messages with your own Doodle without leaving Messenger.</string>

    <string name="slide4_title">Grant Access</string>
    <string name="slide4_description_permissions">Doodle requires storage and camera permissions to let you start a project with a Gallery image or from Camera.</string>
    <string name="slide4_description_normal">Start with a blank project, or choose an image from Gallery or Camera.</string>
</resources>