<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/canvas"
        android:icon="@drawable/ic_action_canvas_color"
        android:title="@string/menu_tools_canvas"
        app:showAsAction="always" />

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_action_share"
        android:title="@string/menu_action_share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="always" />

    <item
        android:id="@+id/save"
        android:icon="@drawable/ic_action_save"
        android:title="@string/menu_action_save"
        app:showAsAction="always" />

    <item
        android:icon="@drawable/ic_action_layers"
        android:title="@string/menu_action_layers"
        app:showAsAction="always">
        <menu android:menuCategory="container">
            <item
                android:id="@+id/undo"
                android:enabled="false"
                android:icon="@drawable/ic_action_undo"
                android:title="@string/menu_action_undo"
                app:showAsAction="never" />
            <item
                android:id="@+id/redo"
                android:enabled="false"
                android:icon="@drawable/ic_action_redo"
                android:title="@string/menu_action_redo"
                app:showAsAction="never" />

            <item
                android:id="@+id/revert"
                android:enabled="false"
                android:icon="@drawable/ic_action_revert"
                android:title="@string/menu_action_revert"
                app:showAsAction="never" />
        </menu>
    </item>

</menu>