<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <item
      android:id="@+id/pen"
      android:icon="@drawable/ic_tool_pen"
      android:title="@string/menu_tools_pen"/>

  <item
      android:id="@+id/shapes"
      android:icon="@drawable/ic_tool_shapes"
      android:title="@string/menu_tools_shape"/>

  <item
      android:id="@+id/space"
      android:icon="@drawable/ic_tool_color_picker"
      android:title="@string/menu_tools_eyedrop"/>

  <item
      android:id="@+id/colorPicker"
      android:icon="@drawable/ic_tool_color_picker"
      android:title="@string/menu_tools_eyedrop"/>

  <item
      android:id="@+id/eraser"
      android:icon="@drawable/ic_tool_eraser"
      android:title="@string/menu_tools_eraser"/>

</menu>