<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="-16dp"
    app:cardCornerRadius="16dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="?attr/colorPrimary"
      android:gravity="center_horizontal"
      android:orientation="vertical"
      android:paddingBottom="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

      <TextView
          android:id="@+id/title"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/label_choose_theme"
          android:textAllCaps="true"
          android:textColor="?attr/colorPrimaryDark"
          android:textSize="20sp"
          android:textStyle="bold"/>

      <TextView
          android:id="@+id/actionbar"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:text="@string/placeholder_default_theme"
          android:textColor="?attr/colorPrimaryDark"
          android:textSize="12sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="8dp">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center_horizontal|top"
          android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/defaultTheme"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/purple_900"
            app:cardCornerRadius="16dp"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/oceanTheme"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/blue_900"
            app:cardCornerRadius="16dp"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/sunlightTheme"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/yellow_900"
            app:cardCornerRadius="16dp"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/forestTheme"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/green_900"
            app:cardCornerRadius="16dp"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/chocolateTheme"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/brown_900"
            app:cardCornerRadius="16dp"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/darkTheme"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/grey_900"
            app:cardCornerRadius="16dp"/>
      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:orientation="horizontal"
          android:paddingBottom="8dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/defaultThemeSelected"
            android:layout_width="4dp"
            android:layout_height="4dp"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            app:cardBackgroundColor="@color/blue_grey_500a"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/oceanThemeSelected"
            android:layout_width="4dp"
            android:layout_height="4dp"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            app:cardBackgroundColor="@color/blue_grey_500a"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/sunlightThemeSelected"
            android:layout_width="4dp"
            android:layout_height="4dp"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            app:cardBackgroundColor="@color/blue_grey_500a"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/forestThemeSelected"
            android:layout_width="4dp"
            android:layout_height="4dp"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            app:cardBackgroundColor="@color/blue_grey_500a"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/chocolateThemeSelected"
            android:layout_width="4dp"
            android:layout_height="4dp"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            app:cardBackgroundColor="@color/blue_grey_500a"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/darkThemeSelected"
            android:layout_width="4dp"
            android:layout_height="4dp"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            app:cardBackgroundColor="@color/blue_grey_500a"/>
      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="end"
          android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="@android:string/cancel"
            android:textColor="?attr/colorPrimaryDark"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ok_button"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_set"
            android:textColor="#fff"
            app:backgroundTint="?attr/colorPrimaryDark"/>

      </LinearLayout>

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        ads:adSize="BANNER"
        ads:adUnitId="@string/admob_ad_banner_confirmation"/>

  </LinearLayout>

</com.google.android.material.card.MaterialCardView>